--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -61,13 +61,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\HexMap\Scripts\HexCell.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\EdgeVertices.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\HexCoordinate.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\HexCoordinatesDrawer.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\HexDirection.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\HexEdgeType.cs" />
-    <Compile Include="Assets\HexMap\Scripts\HexDatas\HexMetrics.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\EdgeVertices.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinate.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinatesDrawer.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\HexDirection.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\HexEdgeType.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexData\HexMetrics.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexGrid.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexGridChunk.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexMapEditor.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexMesh.cs" />
     <Compile Include="Assets\RemoveEmptyFolders.cs" />
@@ -90,19 +91,19 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.6f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -306,13 +307,13 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.6f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>E:/Work Space/Unity Projects/HexMap/trunk/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>E:/Work Space/Unity Projects/HexMap/HexMap/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.6f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
