--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -79,13 +79,15 @@
     <Compile Include="Assets\HexMap\Scripts\NewMapMenu.cs" />
     <Compile Include="Assets\HexMap\Scripts\SaveLoadItem.cs" />
     <Compile Include="Assets\HexMap\Scripts\SaveLoadMenu.cs" />
+    <Compile Include="Assets\HexMap\Scripts\TextureArrayWizard.cs" />
     <Compile Include="Assets\RemoveEmptyFolders.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\Materials\VertexColors.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\Materials\River.shader" />
-    <None Include="Assets\Materials\VertexColors.shader" />
+    <None Include="Assets\Materials\Terrain.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Materials\Water Shore.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
