--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\HexMap\Scripts\HexCell.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexCellPriorityQueue.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\EdgeVertices.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinate.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinatesDrawer.cs" />
@@ -94,6 +95,7 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\Materials\Estuary.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\Materials\Highlight\Highlight.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\Materials\Road.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
