--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\HexMap\Scripts\Bezier.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexCell.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexCellPriorityQueue.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\EdgeVertices.cs" />
