--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\HexMap\Scripts\Bezier.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexCell.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexCellPriorityQueue.cs" />
+    <Compile Include="Assets\HexMap\Scripts\HexCellShaderData.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\EdgeVertices.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinate.cs" />
     <Compile Include="Assets\HexMap\Scripts\HexData\HexCoordinatesDrawer.cs" />
@@ -87,11 +88,12 @@
     <Compile Include="Assets\RemoveEmptyFolders.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\Materials\Feature.shader" />
     <None Include="Assets\Materials\VertexColors.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\Materials\River.shader" />
     <None Include="Assets\Materials\Terrain.shader" />
+    <None Include="Assets\Materials\River.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Materials\Water Shore.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
@@ -104,6 +106,7 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\Materials\Water.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\Materials\HexCellData.cginc" />
     <None Include="Assets\Materials\Water.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
