--- a/HexMap/Assembly-CSharp.csproj
+++ b/HexMap/Assembly-CSharp.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Assets\Prototype\Scripts\HexMapManager.cs" />
     <Compile Include="Assets\Prototype\Scripts\HexMapManagerEditor.cs" />
     <Compile Include="Assets\Prototype\Scripts\IHexUnit.cs" />
+    <Compile Include="Assets\Prototype\Scripts\SkillButton.cs" />
+    <Compile Include="Assets\Prototype\Scripts\UnitInformation.cs" />
     <Compile Include="Assets\Teach\Bullet.cs" />
     <Compile Include="Assets\Teach\Player.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
